# zsh-completions

./: .gitignore  Makefile  Makefile.in  Rakefile  configure.ac
src/: _7z  _a  _apg  _aria2c  _atool  _awk  _base64  _bash  _bc  _blkid  _checkbashisms  _col  _column  _combinediff  _cscope  _csplit  _ctags  _dash  _dc  _dh_make  _diff3  _dig  _dir  _dircolors  _dirname  _ed  _emacs  _fbterm  _ffmpeg  _file  _flock  _fmt  _free  _gawk  _gnu  _go  _gpasswd  _hd  _head  _hostname  (+67 more)
support/: aria2c.sed  aria2c_a.awk  aria2c_b.awk
