#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([my-zsh-completions], [1.0.0])

# Checks for programs.
AC_PROG_AWK
AC_PROG_FGREP

AC_CHECK_PROGS([COLUMN], [column fmt], [cat])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
